[tool.poetry]
name = "dzcachier"
version = "0.1.0"
description = "A customized version from cachier"
packages = [
    {include = "cachier"}
]
authors = ["shaoyucheng <ychshao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
portalocker = "^2.3.0"
watchdog = "^2.0.2"
pathtools = "^0.1.2"
pytest = "^6.2.3"
pymongo = "^3.11.3"
pandas = "^1.2.3"
pytest-cov = "^2.11.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.11.1"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true


